--- a/tex/project.tex
+++ b/tex/project.tex
@@ -10,10 +10,20 @@
 \title{
 Estimating the Discrete Fourier Transform using Deep Learning
 }
-\author{Jonathan Tuck}
-
+\author{
+  Jonathan~Tuck\\
+  Department of Electrical Engineering\\
+  Stanford University\\
+  \texttt{jtuck1@stanford.edu} \\
+}
 \begin{document}
 \maketitle
+
+\begin{abstract}
+Throughout a wide variety of fields, the Fourier Transform -- and namely the Discrete Fourier Transform (DFT) -- 
+is heavily used. In this paper, we show that a simple four-layer neural network with linear activation functions 
+can estimate the DFT to high accuracy. We test our neural network on a variety of signals.
+\end{abstract}
 
 \newpage
 \tableofcontents
