--- a/tex/template.bib
+++ b/tex/template.bib
@@ -144,3 +144,10 @@ month={Mar}
  publisher = {Academic Press},
 } 
 
+@Misc{NUMPY,
+  author =    {T. Oliphant},
+  title =     {{NumPy}: Open source scientific computing for {Python}},
+  year =      {2017},
+  url = "www.numpy.org",
+  note = {[Online. \url{www.numpy.org}]}
+}
