--- a/tex/project.tex
+++ b/tex/project.tex
@@ -10,6 +10,7 @@
 \title{
 Estimating the Discrete Fourier Transform using Deep Learning
 }
+
 \author{
   Jonathan~Tuck\\
   Department of Electrical Engineering\\
@@ -20,13 +21,13 @@ Estimating the Discrete Fourier Transform using Deep Learning
 \maketitle
 
 \begin{abstract}
-Throughout a wide variety of fields, the Fourier Transform -- and namely the Discrete Fourier Transform (DFT) -- 
-is heavily used as a method of analysis of frequency components. In this paper, we show that a simple four-layer 
-neural network with linear activation functions can estimate the DFT to high accuracy. We test our neural network 
-architecture on a variety of signals, and gauge both its accuracy and its speed against the ground truth and its 
-fast, state-of-the-art implementation. We find that our neural network architecture achieves results very close 
-to that of the ground truth, and that our implementation for our problem instance is faster than both the naive 
-implementation and the state-of-the-art implementation.
+Throughout a wide variety of fields, the Discrete Fourier Transform (DFT) is used as a method of analysis 
+of a signal's frequency components. In this paper, we show that a simple three-layer neural network with linear activation 
+functions can estimate the DFT to high accuracy. We test our architecture on a variety of signals, and gauge both its 
+accuracy and its speed against the ground truth and its fast, state-of-the-art implementation. We find that our neural 
+network architecture achieves results very close to that of the ground truth, and that our implementation for our problem 
+instance provides extremely similar accuracy, and is faster than both the naive implementation and the 
+state-of-the-art implementation.
 \end{abstract}
 
 \section{Introduction}
@@ -34,51 +35,50 @@ Throughout a wide variety of fields -- from signal processing \cite{OS:99}, to m
 to optics \cite{G:96} -- the Fourier Transform has been used as an important tool for signal analysis, allowing 
 one to decompose a signal in space or time into its frequency components. Typically, when one wants to analyze a 
 signal, it requires the knowledge of the Fourier Transform (sometimes referred to as the \emph{spectrum}) of the 
-signal. Unfortunately, unknown signals' spectrums are typically only found by computing their Fourier transform 
-and manually inspecting any important attributes, which can be not only a computationally expensive task, but a 
-laborious one as well. 
+signal. 
+% Unfortunately, unknown signals' spectrums are typically only found by computing their Fourier transform 
+% and manually inspecting any important attributes, which is typically both computationally expensive and laborious.
 
-Currently, the method of computing a Fourier transform for a discrete-time signal in $\reals^N$, the Discrete 
-Fourier Transform (DFT), can be computed in $O(N^2)$ time. However, there exists a fast and efficient 
-method of computing the DFT, the Fast Fourier Transform (FFT), which can be computed 
-in $O(N \log N)$ time \cite{B:78,O:17}.
+% Currently, the method of computing a Fourier transform for a discrete-time signal in $\reals^N$, the Discrete 
+% Fourier Transform (DFT), can be computed in $O(N^2)$ time. However, there exists a fast and efficient 
+% method of computing the DFT, the Fast Fourier Transform (FFT), which can be computed 
+% in $O(N \log N)$ time \cite{B:78,O:17}.
 
-The goal of this project is to estimate the DFT of a bandlimited signal given only 
-its time domain representation. This neural network should be able to estimate the Discrete Fourier 
-Transform of bandlimited signal without having to explicitly compute the Discrete Fourier Transform. 
-Ultimately, the results of this project may, in the future, lead to a deep learning architecture able to 
-compute the DFT of a signal faster than the current state-of-the-art algorithm, the FFT \cite{CT:65}.
+The goal of this project is to estimate the DFT of a signal using a neural network architecture.
+This neural network should be able to estimate the Discrete Fourier Transform of the signal without 
+having to explicitly compute the Discrete Fourier Transform. Ultimately, the results of this project may lead to 
+a robust deep learning architecture able to compute the DFT of a signal faster than the current state-of-the-art 
+algorithm, the FFT \cite{CT:65}.
 
 \section{The Discrete Fourier Transform}
-The context and background for this project is abundant, as signal processing has enjoyed a vast treatment
-in the past century. Although there exist many formulations of the Fourier transform \cite{O:17}, the scope 
-of this project will only deal with the DFT, the version that maps from discrete-time to discrete-time, as 
-that is what computers mathematically can handle. The \emph{$N$-point DFT} $F: \reals^N \rightarrow \reals^N$ for an 
-$N$-dimensional discrete-time signal \cite{B:78,O:17} $f = (f[0], f[1], \ldots, f[N-1])$ is defined as
+The context and background for this project is abundant. Although there exist many formulations of the Fourier 
+transform \cite{O:17}, the scope of this project will only deal with the (real part of the) DFT, the version that maps from 
+discrete-time to discrete-time, as that is what computers mathematically can handle. The \emph{$N$-point DFT} 
+$F: \reals^N \rightarrow \reals^N$ for an $N$-dimensional discrete-time signal \cite{B:78,O:17} 
+$f = (f[0], f[1], \ldots, f[N-1])$ is defined as
 \BEQ \label{e-DFT}
 F\{f\}[m] = \sum_{n=0}^{N-1} f[n] e^{2 \pi i m n / N}, \quad m = 0, \ldots, N-1.
 \EEQ
-Figure \ref{f-example_DFT} illustrates a simple example of a discrete-time 
-signal $f[n]$ and the real part of its DFT, Re$\{F\{f\}[m]\}$.
-
-The DFT in equation~(\ref{e-DFT}) can be written as a dense (complex-valued) matrix multiplication, \ie,
-$F\{f\} = D f,$ where $D \in \complexs^{N \times N}$ is a complex matrix with values $e^{2 \pi i m n / N}$ in 
-the $(m,n)$-index. As the DFT can be computed via a dense matrix multiplication, one can compute the DFT naively
-in $O(N^2)$ time. In addition, there exists a method to compute the DFT in $O(N \log N)$ time, the FFT. The method 
-by which the FFT computes the DFT is beyond the scope of this project, and we refer the interested reader to 
-\cite{CT:65}.
+Figure \ref{f-example_DFT} illustrates a simple example of a discrete-time signal $f[n]$ and the real part 
+of its DFT, Re$\{F\{f\}[m]\}$.
 
 \begin{figure}
 \centering
-\includegraphics[scale=.6]{figures/DFT_example.png}
+\includegraphics[scale=.5]{figures/DFT_example.png}
 \caption{Discrete-time signal $f[n] = \sum_{i=1}^5 \cos(2 \pi i n + i)$ and 
 the real part of its DFT, Re$\{F\{f\}[m]\}$.}
 \label{f-example_DFT}
 \end{figure}
 
+The DFT in equation~(\ref{e-DFT}) can be written as a dense (complex-valued) matrix multiplication, \ie,
+$F\{f\} = D f,$ where $D \in \complexs^{N \times N}$ is a complex matrix with values $e^{2 \pi i m n / N}$ in 
+the $(m,n)$-index. As the DFT can be computed via a dense matrix multiplication, one can compute the DFT naively
+in $O(N^2)$ time. In addition, there exists a method to compute the DFT in $O(N \log N)$ time, the FFT. The details 
+of the FFT is beyond the scope of this project, and we refer the interested reader to \cite{CT:65}.
+
 \section{Approach} \label{s-approach}
-The problem of determining the DFT of a bandlimited signal is a supervised learning problem, and so
-neural networks for supervised learning problems will be used.
+% The problem of determining the DFT of a bandlimited signal is a supervised learning problem, and so
+% neural networks for supervised learning problems will be used.
 
 \paragraph{Evaluation metrics.}
 The evaluation of this project shall be based on how close the neural network estimates for 
@@ -88,85 +88,77 @@ a signal's DFT are to the actual signal's DFT. Specifically, the cost function u
 \]
 where $m$ is the number of examples in the set, $F\{f_i\} \in \reals^N$ is the vector of actual DFT 
 for the $i$-th example, and $\hat{F}\{f_i\} \in \reals^N$ is the DFT estimate for the $i$-th example. 
-Sometimes, in signal processing literature, this particular cost function is referred to as the 
-\emph{mean squared error} of the estimates \cite{DG:10}.
+In signal processing literature, this particular cost function is referred to as the 
+\emph{mean squared error} (MSE) of the estimates \cite{DG:10}.
 
 \subsection{Neural network architecture} The neural network architecture is three layers of 
 fully connected layers, with 100 nodes per layer. Intuitively, as the DFT of a matrix can be described 
 as a matrix multiplication, we pick all of the layers' activation functions to be linear activation 
 functions (and indeed, linear activation functions yielded the greatest performance.) In addition to these 
-hyperparameters selected, we used a learning rate of 0.001, a minibatch size of 200, and a drop-out 
-probability of 0.9. We pick these values because they empirically yielded 
-the best training and test performance; that is, our architecture with these hyperparameter values 
-yielded the lowest values of the cost function $\mathcal J$ on both the training and test data.
+hyperparameters selected, we used a learning rate of 0.001, a minibatch size of 250, and a drop-out 
+probability of 0.9. We pick these values because our architecture with these hyperparameter values yielded 
+the lowest values of the cost function $\mathcal J$ on both the training and test data.
 
-\paragraph{Regularization.} Although we attempted to use various forms of regularization (\ie, L2 regularization, 
-L1 regularization, and dropout regularization) we found that overall, our results were better on both the training 
-and test data without any form of regularization.
+\paragraph{Regularization.} Although we attempted to use various forms of regularization such as L2 and 
+L1 regularization, we found that overall, our results were better on both the training and test data 
+without any form of regularization.
 
 \section{Data}
 
-In order to keep the scope of this project manageable, we shall consider only one-dimensional signals (\eg, 
-$f[n] = \cos(n)$), although Fourier transforms and DFTs can be extended to two-dimensional signals 
-(\eg, $g[n,k] = \cos(n)\cos(k)$), three-dimensional signals (\eg, $h[n,k,l] = \cos(n)\cos(k)\cos(l)$), and 
-so on \cite{O:17}.
-We shall \emph{a priori} determine a maximum bandwidth, so that aliasing does not occur for our results \cite{OS:99}.
-
-As data on computers is inherently discrete, it makes sense to consider discrete-time time series data.
-Specifically, the time series data is discretized into 100 elements which correspond to evenly spaced 
-indices $t \in [0,1]$. That is, the input signals are vectors in $\reals^{100}$. For the remainder of
-this paper, when we refer to the DFT, we mean the 100-point DFT. 
+In order to keep the scope of this project manageable, we shall consider only real, one-dimensional 
+signals (\eg, $f[n] = \cos(n)$), although Fourier transforms and DFTs can be extended to two-dimensional signals 
+(\eg, $g[n,k] = \cos(n)\cos(k)$) and so on \cite{O:17}. 
+We \emph{a priori} fix the maximum bandwidth to 10 Hz, 
+so that aliasing does not occur for our results \cite{OS:99}. In addition, the time series data is discretized 
+into 100 elements which correspond to evenly spaced indices $t \in [0,1]$. That is, the input signals are vectors in 
+$\reals^{100}$. For the remainder of this paper, when we refer to the DFT, we mean the real part of the 
+100-point DFT. 
 
 
 \subsection{Training and test data} Discrete-time time series data is readily abundant and 
 training data can be synthetically generated efficiently. Since all signals are simply sums of 
 sinusoids at different frequencies and amplitudes, it is appropriate to synthetically generate
 data by simply adding randomly generated sinusoids together, some with various types of noise 
-(\eg, white noise, pink noise, \etc.)
-
-For each example, we shall randomly choose the number of sinusoids 
-to be added, and their frequencies. The amplitudes will all be normalized to 1; this is a reasonable 
-normalization to make, as amplitude (to scale) has no effect on the DFT of a signal.
-
-The test data shall be generated in the same way that the training data is
-generated. In this way, the training data and the test data shall be drawn from the same distributions,
-so as to minimize variance.
+(\eg, white noise, pink noise, \etc.) For each example, we shall randomly choose the number of 
+sinusoids to be added, and their frequencies. The test data shall be generated in the same way that the 
+training data is generated. In this way, the training data and the test data shall be drawn from the same 
+distributions, so as to minimize variance.
 
 \paragraph{Data splits.} In this project, we split our $m=30000$ examples into training, development, and test
 sets. We have chosen that 90\% of the data is dedicated to the training set, and the remaining 10\% is 
 dedicated to the test set. We found that we did not need to allocate any data to include a development set.
 
 \section{Results} 
+\subsection{Accuracy} 
 Figure~\ref{f-example_cost_vs_epoch} is a plot of the cost $\mathcal J$ versus epoch on the training 
-data for this particular problem instance and initialization.
-
-\subsection{Accuracy} For the hyperparameters specified in \S\ref{s-approach}, our neural network architecture achieves 
-an MSE of $2.46 \times 10^{-3}$ on the training data and an MSE of $6.60 \times 10^{-2}$ on the test data after 2500 
-epochs.
+data for this particular problem instance and initialization. 
+For the hyperparameters specified in \S\ref{s-approach}, our neural network architecture achieves an 
+MSE of $2.46 \times 10^{-3}$ on the training data and an MSE of $6.60 \times 10^{-2}$ on the test data after 
+2500 epochs.
 
 \begin{figure}
 \centering
-\includegraphics[scale=.75]{figures/final_cost_vs_epoch.png}
+\includegraphics[scale=.5]{figures/final_cost_vs_epoch.png}
 \caption{Cost versus epoch on the training data.}
 \label{f-example_cost_vs_epoch}
 \end{figure}
 
 Figure~\ref{f-DFT_compare} is a plot comparing the real part of the DFT of an example in the test set 
-versus its neural network estimate. The two graphs are very similar, but not completely identical; we 
+versus its neural network estimate. The two graphs are very similar, but not identical; we 
 find that for the particular example in Figure~\ref{f-DFT_compare}, 
 $\|F\{f\} - \hat{F}\{f\}\|_2 / \|F\{f\}\|_2 = 6.55 \times 10^{-3}$. This result suggests that this particular
 neural network architecutre for estimating the DFT of a vector is valid and can be used successfully.
 
 \begin{figure}
 \centering
-\includegraphics[scale=.75]{figures/DFT_comparisons.png}
+\includegraphics[scale=.65]{figures/DFT_comparisons.png}
 \caption{The real part of the DFT of an example (bottom) and the estimate from the output of the neural network.}
 \label{f-DFT_compare}
 \end{figure}
 
 \subsection{Timing}
 We examine the timing performance of the naive implementation of the DFT, the FFT, and our neural network architecture
-on the data. We utilize the NumPy package in Python for these implementations \cite{NUMPY}.
+on the data. We utilize the Python package, NumPy, for these implementations \cite{NUMPY}.
 
 Over the 3000 data examples in the test set, the naive implementation of the DFT averaged a time of 5.4 $\mu$s,
 the FFT averaged a time of 3.5 $\mu$s, while our neural network implementation maintained a time of 3.4 $\mu$s, a time
@@ -174,8 +166,8 @@ faster than both the naive implementationa and the FFT. These results show that 
 network architecture can become faster than the current state-of-the-art methods, at the cost of a small loss in accuracy.
 
 \section{Future work}
-For the field of Fourier analysis with deep learning, there exists a multitude of unanswered questions that stem from 
-this research.
+% For the field of Fourier analysis with deep learning, there exists a multitude of unanswered questions that stem from 
+% this research.
 
 \paragraph{Exploiting structure.} It is well known that many signal processing problems become easier to solve if structure is
 exploited, such as in compressed sensing, where sparsity is exploited to reduce the minimum sampling rate for perfect signal
